k8s/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-web-app
  namespace: airflow
spec:
  selector:
    matchLabels:
      app: my-web-app
  template:
    metadata:
      labels:
        app: my-web-app
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: my-web-app            # can be different, but matching the deployment keeps things simple
  namespace: airflow
spec:
  type: ClusterIP             # default, but included for clarity
  selector:
    app: my-web-app           # must match the pod labels in the Deployment
  ports:
    - port: 80                # the port other pods will call
      targetPort: 80          # the containerPort in the Deployment
